# Streaming

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
doc/: ADTS采样率对照表.md  FFmpeg记录.md  ffmpeg命令分类.md  多媒体的基本概念.md  打印音视频基本信息.md  抽取视频数据.md  抽取音频数据.md
doc/cmd/: ffmpeg_base_process.md  ffmpeg_cmd.md  ffmpeg_cmd_params.md
lib/: libavdevice.58.3.100.dylib  libavdevice.58.5.100.dylib  libavdevice.dylib  libavfilter.7.dylib  libavformat.58.dylib  libavformat.dylib  libavresample.4.0.0.dylib  libavresample.dylib  libavutil.56.22.100.dylib  libavutil.56.dylib  libavutil.dylib  libpostproc.55.dylib  libpostproc.dylib  libswresample.3.3.100.dylib  libswresample.3.dylib  libswresample.dylib  libswscale.5.1.100.dylib  libswscale.5.3.100.dylib  libswscale.dylib
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavresample.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
src/: first_sdl.c  main.c
src/ffmpeg/: ff_log.c  ff_log.h  ffmpeg_file_op.c  ffmpeg_file_op.h  ffmpeg_log.c  list_file.c  list_file.h  printf_media_info.c  printf_media_info.h  take_audio_data.c  take_audio_data.h  take_video_data.c  take_video_data.h
src/ffmpeg/utils/: add_adts.c  add_adts.h  h264_mp4convert.c  h264_mp4convert.h
src/play/: sample_play_video.c  sample_play_video.h
src/sdl/: first_sdl.c  surface_sdl.c  surface_sdl.h
src/utils/: add_adts.h
